casi termino de corregir todo

--- a/HTML/Casos-Resueltos.html
+++ b/HTML/Casos-Resueltos.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Te mostramos nuestros casos mas desafiantes y con muy buenas reseñas">
-    <meta name="keywords" content="Fantasmas, Cazafantasmas, Servicios, Fumigacion, Ayuda">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="../css/styles.css" rel="stylesheet">
-    <title>Misterio a la orden</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Te mostramos nuestros casos mas desafiantes y con muy buenas reseñas">
+  <meta name="keywords" content="Fantasmas, Cazafantasmas, Servicios, Fumigacion, Ayuda">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="../css/styles.css" rel="stylesheet">
+  <title>Misterio a la orden</title>
 </head>
+
 <body class="fondo3">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Misterio a la orden - Casos Resueltos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+        aria-labelledby="offcanvasDarkNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu de Inicio</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -40,59 +46,65 @@
               <a class="nav-link" href="Agradecimientos.html">Agradecimientos</a>
             </li>
   </nav>
-  <br>
-  <br>
-  <br>
-  <br>
-<div class="casas1-3">
+
+  <div class="casas1-3">
     <div class="card" style="width: 18rem;">
       <img src="../Imagenes/casa-embrujada 1.webp" class="card-img-top" alt="Mansion tenebrosa">
-      <div class="card-body"> 
-        <p class="card-text">Nos enfrentamos a un reto escalofriante en una casa embrujada. Atravesamos sus pasillos llenos de sombras y enfrentamos a espíritus inquietos.</p>
+      <div class="card-body">
+        <p class="card-text">Nos enfrentamos a un reto escalofriante en una casa embrujada. Atravesamos sus pasillos
+          llenos de sombras y enfrentamos a espíritus inquietos.</p>
       </div>
     </div>
-    <br>
+
     <div class="card" style="width: 18rem;">
       <img src="../Imagenes/casa-embrujada 2.jpg" class="card-img-top" alt="Mansion tetrico">
       <div class="card-body">
         <p class="card-text">
-          Nos adentramos valientemente en la aterradora mansión encantada, desvelando enigmas y liberando a los espectros perturbados.</p>
+          Nos adentramos valientemente en la aterradora mansión encantada, desvelando enigmas y liberando a los
+          espectros perturbados.</p>
       </div>
     </div>
-    <br>
+
     <div class="card" style="width: 18rem;">
       <img src="../Imagenes/casa-embrujada 3.jpg" class="card-img-top" alt="Cabaña aterradora de noche">
       <div class="card-body">
-        <p class="card-text">Desafiando nuestros miedos, exploramos la siniestra mansión, desvelando secretos ocultos y confrontando a las sombras misteriosas.</p>
+        <p class="card-text">Desafiando nuestros miedos, exploramos la siniestra mansión, desvelando secretos ocultos y
+          confrontando a las sombras misteriosas.</p>
       </div>
     </div>
-</div>
-    <br>
-<div class="casas4-6">
+  </div>
+
+  <div class="casas4-6">
     <div class="card" style="width: 18rem;">
       <img src="../Imagenes/casa-embrujada 4.webp" class="card-img-top" alt="Una casa en un cementerio">
       <div class="card-body">
-        <p class="card-text">Nos aventuramos en la casa embrujada, enfrentando sus terrores y desentrañando sus enigmas. </p>
+        <p class="card-text">Nos aventuramos en la casa embrujada, enfrentando sus terrores y desentrañando sus enigmas.
+        </p>
       </div>
     </div>
-    <br>
+
     <div class="card" style="width: 18rem;">
       <img src="../Imagenes/casa-embrujada 5.jpg" class="card-img-top" alt="Mansion en medio de un bosque muerto">
       <div class="card-body">
-        <p class="card-text">Nos sumergimos en la oscuridad de la mansión embrujada, enfrentando sus misterios y desafiando nuestros propios temores.</p>
+        <p class="card-text">Nos sumergimos en la oscuridad de la mansión embrujada, enfrentando sus misterios y
+          desafiando nuestros propios temores.</p>
       </div>
     </div>
-    <br>
+
     <div class="card" style="width: 18rem;">
       <img src="../Imagenes/casa-embrujada 6.avif" class="card-img-top" alt="Una casa blanca destruida">
       <div class="card-body">
-        <p class="card-text">Intrépidos ante la morada del terror, desenmascaramos la siniestra trama de la casa encantada. Desterramos las sombras y restauramos la paz en este lugar embrujado.</p>
+        <p class="card-text">Intrépidos ante la morada del terror, desenmascaramos la siniestra trama de la casa
+          encantada. Desterramos las sombras y restauramos la paz en este lugar embrujado.</p>
       </div>
     </div>
-</div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
 <footer>
   asds
 </footer>
+
 </html>
