--- a/HTML/Contactanos.html
+++ b/HTML/Contactanos.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Contactanos y dejanos ocuparnos del problema">
-    <meta name="keywords" content="Fantasmas, Cazafantasmas, Servicios, Fumigacion, Ayuda">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="../css/styles.css" rel="stylesheet">
-    <title>Misterio a la orden</title>
-    <style>
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Contactanos y dejanos ocuparnos del problema">
+  <meta name="keywords" content="Fantasmas, Cazafantasmas, Servicios, Fumigacion, Ayuda">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="../css/styles.css" rel="stylesheet">
+  <title>Misterio a la orden</title>
+  <style>
+  </style>
 </head>
+
 <body class="fondo4">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Misterio a la orden - Contactanos</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+        aria-labelledby="offcanvasDarkNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu de Inicio</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -41,35 +47,35 @@
             <li class="nav-item dropdown">
               <a class="nav-link" href="Agradecimientos.html">Agradecimientos</a>
             </li>
-          </nav>
-<br>
-<br>
-<br>
-<div class="login">
-  <div class="formLogin">
-  <form>
-  <h1>Hablanos</h1>
+  </nav>
+  <div class="login">
+    <div class="formLogin">
+      <form>
+        <h1>Hablanos</h1>
 
-    <div class="inputContainer">
-      <label for="nombre"></label>
-      <input type="number" required id="nombre" name="nombre" placeholder="N. de Telefono">
+        <div class="inputContainer">
+          <label for="nombre"></label>
+          <input type="number" required id="nombre" name="nombre" placeholder="N. de Telefono">
+        </div>
+
+        <div class="inputContainer">
+          <label for="email"></label>
+          <input type="email" required id="email" name="email" placeholder="Email">
+        </div>
+
+        <div class="inputContainer">
+          <label for="mensaje" required></label>
+          <input type="text" required id="mensaje" name="mensaje" placeholder="Direccion"></input>
+        </div>
+
+        <button class="submitButton" type="button">Enviar</button>
+      </form>
     </div>
-
-    <div class="inputContainer">
-      <label for="email"></label>
-      <input type="email" required id="email" name="email" placeholder="Email">
-    </div>
-
-    <div class="inputContainer">
-      <label for="mensaje" required></label>
-      <input type="text" required id="mensaje" name="mensaje"placeholder="Direccion"></input>
-    </div>
-
-      <button class="submitButton" type="button">Enviar</button>
-   </form>
   </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
