--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, in itial-scale=1.0">
-    <meta name="description" content="Realizamos el mejor servicio del pais">
-    <meta name="keywords" content="Fantasmas, Cazafantasmas, Servicios, Fumigacion">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <link href="./css/styles.css" rel="stylesheet">
-    <style>
-    </style>
-    <title>Misterio a la orden</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Realizamos el mejor servicio del pais">
+  <meta name="keywords" content="Fantasmas, Cazafantasmas, Servicios, Fumigacion">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+  <link href="./css/styles.css" rel="stylesheet">
+  <style>
+  </style>
+  <title>Misterio a la orden</title>
 </head>
+
 <body class="fondo1">
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand">Misterio a la orden - Inicio</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+        aria-labelledby="offcanvasDarkNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menu de Inicio</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -30,50 +36,58 @@
               <a class="nav-link active" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../Proyectofinal/HTML/Conocenos.html">Conocenos</a>
+              <a class="nav-link" href="./HTML/Conocenos.html">Conocenos</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="../Proyectofinal/HTML/Contactanos.html">Contactanos</a>
+              <a class="nav-link" href="./HTML/Contactanos.html">Contactanos</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="../Proyectofinal/HTML/Casos-Resueltos.html">Casos Resueltos</a>
+              <a class="nav-link" href="./HTML/Casos-Resueltos.html">Casos Resueltos</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link" href="../Proyectofinal/HTML/Agradecimientos.html">Agradecimientos</a>
-            </li>           
+              <a class="nav-link" href="./HTML/Agradecimientos.html">Agradecimientos</a>
+            </li>
   </nav>
-  <br>
-  <br>
-  <br>
   <h1 class="tituloP">Servicio de Cazafantasmas</h1>
-  <img src="../Proyectofinal/Imagenes/background-image.jpg" class="img-fluid" alt="Logo de los cazafantasmas">
-      <p class="texto-inicio">Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está aquí para resolver esos misterios espeluznantes y salvar el día.¿Qué nos hace diferentes de otros equipos de cazafantasmas? Nuestra fórmula ganadora radica en nuestra dinámica como grupo. Pero eso no es todo. Nuestro furgón de alta tecnología, la Máquina del Misterio, está equipado con todo lo necesario para investigar y perseguir espíritus malignos. Desde rastreadores de fantasmas hasta trampas especializadas, tenemos todas las herramientas necesarias para resolver los casos más escalofriantes.
-      </p>
-     <br> 
-     <br>
- <div class="contenedor">     
-  <div class="reloj">
-    <img src="./Imagenes/reloj minimalista.jpg" alt="reloj negro" class="reloj1">
+  <img src="./Imagenes/cazafantasmas.jpg" alt="Logo de los cazafantasmas">
+  <p>Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y
+    emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu
+    ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está
+    aquí para resolver esos misterios espeluznantes y salvar el día.¿Qué nos hace diferentes de otros equipos de
+    cazafantasmas? Nuestra fórmula ganadora radica en nuestra dinámica como grupo. Pero eso no es todo. Nuestro furgón
+    de alta tecnología, la Máquina del Misterio, está equipado con todo lo necesario para investigar y perseguir
+    espíritus malignos. Desde rastreadores de fantasmas hasta trampas especializadas, tenemos todas las herramientas
+    necesarias para resolver los casos más escalofriantes.
+  </p>
+  <div class="contenedor">
+    <div class="reloj">
+      <img src="./Imagenes/reloj minimalista.jpg" alt="reloj negro" class="reloj1">
       <p class="texto-inicio">
-        <h1>Coordinación</h1>
-        Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido vamos a estar.</p>
-   </div>
-  <div class="candado"> 
-    <img src="./Imagenes/candado minimalista.webp" alt="candado negro" class="candado2">
-      <p class="texto-inicio"> <h1>Te protegemos</h1>
-        Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos necesarios para tu tranquilidad.</p>
+      <h1>Coordinación</h1>
+      Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido
+      vamos a estar.</p>
+    </div>
+    <div class="candado">
+      <img src="./Imagenes/candado minimalista.webp" alt="candado negro" class="candado2">
+      <p class="texto-inicio">
+      <h1>Te protegemos</h1>
+      Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos
+      necesarios para tu tranquilidad.</p>
+    </div>
+    <br>
+    <div class="corona">
+      <img src="./Imagenes/corona minimalusta.png" alt="corona negra" class="corona3">
+      <p class="texto-inicio">
+      <h1>Garantizamos calidad</h1>
+      Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos
+      habilitados a emitir certificados para toda la provincia.</p>
+    </div>
   </div>
-     <br>
-  <div class="corona">
-    <img src="./Imagenes/corona minimalusta.png" alt="corona negra" class="corona3">
-      <p class="texto-inicio"><h1>Garantizamos calidad</h1>
-        Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos habilitados a emitir certificados para toda la provincia.</p>
-  </div> 
- </div>
-   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
- </script>  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous">
+    </script>
+  <footer>
+    Scooby.inc
+  </footer>
 </body>
-<footer>
-  Scooby.inc
-</footer>
 </html>
