termine de corregir

--- a/HTML/Conocenos.html
+++ b/HTML/Conocenos.html
@@ -62,7 +62,7 @@
       <div class="card-container1">
         <div class="header1">
           <a href="#">
-            <img class="Foto-cara" src="../Imagenes/Daphne scooby doo.jpg" alt="Cara de Daphne" width="250px"
+            <img class="Foto-cara" id="#Daphne" src="../Imagenes/Daphne scooby doo.jpg" alt="Cara de Daphne" width="250px"
               height="200px">
           </a>
           <h2>Daphen Blake</h2>
@@ -78,7 +78,8 @@
       <div class="card-container2">
         <div class="header2">
           <a href="#">
-            <img class="Foto-cara" src="../Imagenes/Fred scooby doo.webp" alt="Cara de Fred" width="250px" height="200px">
+            <img class="Foto-cara" id="Fred" src="../Imagenes/Fred scooby doo.webp" alt="Cara de Fred" width="250px"
+              height="200px">
           </a>
           <h2>Fred Jones</h2>
           <h4>El valiente</h4>
@@ -93,7 +94,8 @@
       <div class="card-container3">
         <div class="header3">
           <a href="#">
-            <img class="Foto-cara" src="../Imagenes/Velma scooby doo.avif" alt="Cara de Velma" width="250px" height="200px">
+            <img class="Foto-cara" id="Velma" src="../Imagenes/Velma scooby doo.avif" alt="Cara de Velma" width="250px"
+              height="200px">
           </a>
           <h2>Velma Dinkley</h2>
           <h4>La inteligente</h4>
@@ -108,7 +110,8 @@
       <div class="card-container4">
         <div class="header4">
           <a href="#">
-            <img class="Foto-cara" src="../Imagenes/shaggy scooby doo.webp" alt="Cara de Shaggy" width="250px" height="200px">
+            <img class="Foto-cara" id="Shaggy" src="../Imagenes/shaggy scooby doo.webp" alt="Cara de Shaggy" width="250px"
+              height="200px">
           </a>
           <h2>Shaggy Norvle</h2>
           <h4>El asustadizo</h4>
@@ -123,14 +126,15 @@
       <div class="card-container5">
         <div class="header5">
           <a href="#">
-            <img class="Foto-cara" src="../Imagenes/ScoobyDoo prro.jpg" alt="Cara de Scooby-Doo" width="250px" height="200px">
+            <img class="Foto-cara" id="Scooby" src="../Imagenes/ScoobyDoo prro.jpg" alt="Cara de Scooby-Doo" width="250px"
+              height="200px">
           </a>
           <h2>Scooby Doo</h2>
           <h4>El hambriento</h4>
         </div>
         <div class="descripcion5">
           <p class="scooby">¡Soy una fuente constante de entretenimiento y diversión en el equipo! Mi temperamento es
-            alegre y divertido, y me encanta descubrir grandes misterios</p>
+            alegre y divertido.</p>
         </div>
       </div>
     </div>
