--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </li>
   </nav>
   <h1 class="tituloP">Servicio de Cazafantasmas</h1>
-  <img src="./Imagenes/cazafantasmas.jpg" alt="Logo de los cazafantasmas">
+  <img class="cazafantasmas" src="./Imagenes/cazafantasmas.jpg" alt="Logo de los cazafantasmas">
   <p>Somos el inigualable equipo de Scooby-Doo y nos complace presentarles nuestro nuevo y
     emocionante servicio: ¡Los Cazafantasmas de Scooby-Doo! ¿Estás experimentando extraños sucesos paranormales en tu
     ciudad? ¿Te persiguen espectros, fantasmas y criaturas sobrenaturales? ¡No te preocupes más! Nuestro equipo está
@@ -90,4 +90,5 @@
     Scooby.inc
   </footer>
 </body>
+
 </html>
