añadi las nuevas correcciones

--- a/HTML/Conocenos.html
+++ b/HTML/Conocenos.html
@@ -62,8 +62,7 @@
       <div class="card-container1">
         <div class="header1">
           <a href="#">
-            <img class="Foto-cara" id="#Daphne" src="../Imagenes/Daphne scooby doo.jpg" alt="Cara de Daphne" width="250px"
-              height="200px">
+            <img class="Foto-cara" id="#Daphne" src="../Imagenes/Daphne scooby doo.jpg" alt="Cara de Daphne">
           </a>
           <h2>Daphen Blake</h2>
           <h4>la investigadora</h4>
@@ -78,8 +77,7 @@
       <div class="card-container2">
         <div class="header2">
           <a href="#">
-            <img class="Foto-cara" id="Fred" src="../Imagenes/Fred scooby doo.webp" alt="Cara de Fred" width="250px"
-              height="200px">
+            <img class="Foto-cara" id="Fred" src="../Imagenes/Fred scooby doo.webp" alt="Cara de Fred">
           </a>
           <h2>Fred Jones</h2>
           <h4>El valiente</h4>
@@ -94,8 +92,7 @@
       <div class="card-container3">
         <div class="header3">
           <a href="#">
-            <img class="Foto-cara" id="Velma" src="../Imagenes/Velma scooby doo.avif" alt="Cara de Velma" width="250px"
-              height="200px">
+            <img class="Foto-cara" id="Velma" src="../Imagenes/Velma scooby doo.avif" alt="Cara de Velma">
           </a>
           <h2>Velma Dinkley</h2>
           <h4>La inteligente</h4>
@@ -110,8 +107,7 @@
       <div class="card-container4">
         <div class="header4">
           <a href="#">
-            <img class="Foto-cara" id="Shaggy" src="../Imagenes/shaggy scooby doo.webp" alt="Cara de Shaggy" width="250px"
-              height="200px">
+            <img class="Foto-cara" id="Shaggy" src="../Imagenes/shaggy scooby doo.webp" alt="Cara de Shaggy">
           </a>
           <h2>Shaggy Norvle</h2>
           <h4>El asustadizo</h4>
@@ -126,8 +122,7 @@
       <div class="card-container5">
         <div class="header5">
           <a href="#">
-            <img class="Foto-cara" id="Scooby" src="../Imagenes/ScoobyDoo prro.jpg" alt="Cara de Scooby-Doo" width="250px"
-              height="200px">
+            <img class="Foto-cara" id="Scooby" src="../Imagenes/ScoobyDoo prro.jpg" alt="Cara de Scooby-Doo">
           </a>
           <h2>Scooby Doo</h2>
           <h4>El hambriento</h4>
