--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
   <div class="contenedor">
     <div class="reloj">
       <img src="./Imagenes/reloj minimalista.jpg" alt="reloj negro" class="reloj1">
+      <h2 class="h2inicio">Coordinación</h2>
       <p class="texto-inicio">
-      <h1>Coordinación</h1>
-      Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y rápido
-      vamos a estar.</p>
+        Nos adaptamos a tus tiempos y para cuando lo necesites. Sabemos que es algo que querés solucionar rápido, y
+        rápido
+        vamos a estar.</p>
     </div>
     <div class="candado">
-      <img src="./Imagenes/candado minimalista.webp" alt="candado negro" class="candado2">
+      <img src="./Imagenes/candado minimalista.webp" alt="candado negro" class="candadoycorona">
+      <h2 class="h2inicio">Te protegemos</h2>
       <p class="texto-inicio">
-      <h1>Te protegemos</h1>
-      Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos
-      necesarios para tu tranquilidad.</p>
+        Usamos productos que no son tóxicos. Los operarios están asegurados, certificados y te brindamos todos los datos
+        necesarios para tu tranquilidad.</p>
     </div>
-    <br>
     <div class="corona">
-      <img src="./Imagenes/corona minimalusta.png" alt="corona negra" class="corona3">
+      <img src="./Imagenes/corona minimalusta.png" alt="corona negra" class="candadoycorona">
+      <h2 class="h2inicio">Garantizamos calidad</h2>
       <p class="texto-inicio">
-      <h1>Garantizamos calidad</h1>
-      Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos
-      habilitados a emitir certificados para toda la provincia.</p>
+        Trabajamos con productos de los mejores laboratorios, director técnico e ingeniero agrónomo. También estamos
+        habilitados a emitir certificados para toda la provincia.</p>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
