agregue medidas para tablet

--- a/HTML/Casos-Resueltos.html
+++ b/HTML/Casos-Resueltos.html
@@ -48,7 +48,7 @@
   </nav>
 
   <div class="casas1-3">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="../Imagenes/casa-embrujada 1.webp" class="card-img-top" alt="Mansion tenebrosa">
       <div class="card-body">
         <p class="card-text">Nos enfrentamos a un reto escalofriante en una casa embrujada. Atravesamos sus pasillos
@@ -56,7 +56,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="../Imagenes/casa-embrujada 2.jpg" class="card-img-top" alt="Mansion tetrico">
       <div class="card-body">
         <p class="card-text">
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="../Imagenes/casa-embrujada 3.jpg" class="card-img-top" alt="Cabaña aterradora de noche">
       <div class="card-body">
         <p class="card-text">Desafiando nuestros miedos, exploramos la siniestra mansión, desvelando secretos ocultos y
@@ -75,7 +75,7 @@
   </div>
 
   <div class="casas4-6">
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="../Imagenes/casa-embrujada 4.webp" class="card-img-top" alt="Una casa en un cementerio">
       <div class="card-body">
         <p class="card-text">Nos aventuramos en la casa embrujada, enfrentando sus terrores y desentrañando sus enigmas.
@@ -83,7 +83,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="../Imagenes/casa-embrujada 5.jpg" class="card-img-top" alt="Mansion en medio de un bosque muerto">
       <div class="card-body">
         <p class="card-text">Nos sumergimos en la oscuridad de la mansión embrujada, enfrentando sus misterios y
@@ -91,7 +91,7 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
+    <div class="card">
       <img src="../Imagenes/casa-embrujada 6.avif" class="card-img-top" alt="Una casa blanca destruida">
       <div class="card-body">
         <p class="card-text">Intrépidos ante la morada del terror, desenmascaramos la siniestra trama de la casa
@@ -99,12 +99,12 @@
       </div>
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
 </body>
 <footer>
-  asds
+  Scooby-Doo INC
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    crossorigin="anonymous"></script>
 
 </html>
