--- a/HTML/Agradecimientos.html
+++ b/HTML/Agradecimientos.html
@@ -56,15 +56,18 @@
   </div>
 
   <h2 class="titulo4">Y aca dejamos una lista de reproduccion para escuchar mientras cazas fantasmas</h2>
-  <iframe style="border-radius:12px"
-    src="https://open.spotify.com/embed/playlist/5HV9nHrB6xWRlfsM6typJe?utm_source=generator" width="100%" height="352"
-    frameBorder="0" allowfullscreen=""
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
+  <iframe class="lista-spotify" style="border-radius:12px"
+    src="https://open.spotify.com/embed/playlist/5HV9nHrB6xWRlfsM6typJe?utm_source=generator" frameBorder="0"
+    allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+    loading="lazy">
   </iframe>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+</body>
+<footer>
+  Scooby-Doo INC
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
     crossorigin="anonymous"></script>
-</body>
-
+    
 </html>
